crates/biome_cli/tests/snapshots/main_commands_check/should_apply_correct_file_source.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check file.ts
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "preset": "recommended",
      "correctness": {
        "noUndeclaredVariables": "error"
      }
    }
  }
}
```

## `file.ts`

```ts
type A = { a: string }; type B = Partial<A>
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.ts:1:30 lint/correctness/noUnusedVariables ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This type alias B is unused.
  
  > 1 │ type A = { a: string }; type B = Partial<A>
      │                              ^
  
  i Unused variables are often the result of typos, incomplete refactors, or other sources of bugs.
  

```

```block
file.ts format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - type·A·=·{·a:·string·};·type·B·=·Partial<A>
      1 │ + type·A·=·{·a:·string·};
      2 │ + type·B·=·Partial<A>;
      3 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
Found 1 warning.
```
