crates/biome_cli/tests/snapshots/main_commands_check/should_disable_a_rule_group.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write fix.js
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "recommended": true,
      "suspicious": {
        "recommended": false
      }
    }
  }
}
```

## `fix.js`

```js
1 >= -0;

```

# Emitted Messages

```block
biome.json:2:13 deserialize  DEPRECATED  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The use of the recommended field has been deprecated, and will removed in the next major version of Biome. Use preset instead.
  
     1 │ {
   > 2 │   "linter": {
       │             ^
   > 3 │     "rules": {
   > 4 │         "recommended": true,
   > 5 │         "suspicious": {
   > 6 │             "recommended": false
   > 7 │         }
   > 8 │     }
   > 9 │   }
       │   ^
    10 │ }
  
  i Migrate the configuration with the proper command
  
  $ biome migrate
  

```

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
