crates/biome_cli/tests/snapshots/main_commands_check/should_not_enable_all_recommended_rules.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check fix.js
```

## `biome.json`

```json
{
  "assist": {
    "enabled": false
  },
  "linter": {
    "enabled": true,
    "rules": {
      "recommended": false,
      "a11y": {},
      "complexity": {},
      "correctness": {},
      "performance": {},
      "security": {},
      "style": {},
      "suspicious": {}
    }
  }
}
```

## `fix.js`

```js

    		LOOP: for (const x of xs) {
    		    if (x > 0) {
    		        break;
    		    }
    		    f(x);
    		}
		
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
biome.json:5:13 deserialize  DEPRECATED  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The use of the recommended field has been deprecated, and will removed in the next major version of Biome. Use preset instead.
  
     3 │ 		"enabled": false
     4 │ 	},
   > 5 │ 		"linter": {
       │ 		          ^
   > 6 │ 		"enabled": true,
        ...
  > 15 │ 			"suspicious": {}
  > 16 │ 		}
  > 17 │ 	}
       │ 	^
    18 │ 	}
  
  i Migrate the configuration with the proper command
  
  $ biome migrate
  

```

```block
fix.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - 
    2   │ - ····→ → LOOP:·for·(const·x·of·xs)·{
    3   │ - ····→ → ····if·(x·>·0)·{
    4   │ - ····→ → ········break;
    5   │ - ····→ → ····}
    6   │ - ····→ → ····f(x);
    7   │ - ····→ → }
    8   │ - → → 
      1 │ + LOOP:·for·(const·x·of·xs)·{
      2 │ + → if·(x·>·0)·{
      3 │ + → → break;
      4 │ + → }
      5 │ + → f(x);
      6 │ + }
      7 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
