crates/biome_cli/tests/snapshots/main_commands_check/should_organize_imports_diff_on_check.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --linter-enabled=false --write check.js
```

## `check.js`

```js
import { bar, foom, lorem } from "foo";
import * as something from "../something";

```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
