crates/biome_cli/tests/snapshots/main_commands_check/should_pass_if_there_are_only_warnings.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write --unsafe file.js
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "preset": "recommended",
      "suspicious": {
        "noClassAssign": "warn"
      }
    }
  }
}
```

## `file.js`

```js
class A {}
A = 0;

```

# Emitted Messages

```block
file.js:2:1 lint/suspicious/noClassAssign ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! 'A' is a class.
  
    1 │ class A {}
  > 2 │ A = 0;
      │ ^
    3 │ 
  
  i 'A' is defined here.
  
  > 1 │ class A {}
      │       ^
    2 │ A = 0;
    3 │ 
  

```

```block
file.js:1:7 lint/correctness/noUnusedVariables ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This class A is unused.
  
  > 1 │ class A {}
      │       ^
    2 │ A = 0;
    3 │ 
  
  i Unused variables are often the result of typos, incomplete refactors, or other sources of bugs.
  

```

```block
Checked 1 file in <TIME>. Fixed 1 file.
Found 2 warnings.
```
