crates/biome_cli/tests/snapshots/main_commands_check/should_show_formatter_diagnostics_for_files_ignored_by_linter.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check build/file.js
```

## `biome.json`

```json
{
  "$schema": "https://biomejs.dev/schemas/1.6.1/schema.json",
  "assist": {
    "enabled": true
  },
  "linter": {
    "enabled": true,
    "includes": ["**", "!build/**"],
    "rules": {
      "preset": "recommended"
    }
  }
}
```

## `build/file.js`

```js

	value['optimizelyService'] = optimizelyService;
		
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
biome.json:2:24 deserialize ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The configuration schema version does not match the CLI version 0.0.0
  
    1 │ {
  > 2 │             "$schema": "https://biomejs.dev/schemas/1.6.1/schema.json",
      │                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    3 │             "assist": {
    4 │                 "enabled": true
  
  i   Expected:                     0.0.0
      Found:                        1.6.1
  
  
  i Run the command biome migrate to migrate the configuration file.
  

```

```block
build/file.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - 
    2   │ - → value['optimizelyService']·=·optimizelyService;
    3   │ - → → 
      1 │ + value["optimizelyService"]·=·optimizelyService;
      2 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
